--- a/css/style.css
+++ b/css/style.css
@@ -12,3 +12,22 @@ body {
 canvas {
   border: 2px solid black;
 }
+.win-window {
+  padding: 50px;
+  background-color: blue;
+  color: white;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 5px solid white;
+  border-radius: 100px;
+  font-size: 50px;
+}
+
+.hidden {
+  opacity: 0;
+}
+.visible {
+  opacity: 100;
+}
